FIX: Fixed layout issues and made github logo better..
Changed logo image and increased size.

--- a/pages/style.css
+++ b/pages/style.css
@@ -172,8 +172,8 @@ body {
 }
 
 .dev-card .icon {
-    width: 24px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
     margin-top: 10px;
 }
 
